--- a/test.html
+++ b/test.html
@@ -73,9 +73,9 @@
                 console.log('Testing CSV load...');
 
                 const paths = [
-                    'data/lotto_1_1202.csv',
-                    './data/lotto_1_1202.csv',
-                    '../data/lotto_1_1202.csv'
+                    'data/lotto_data.csv',
+                    './data/lotto_data.csv',
+                    '../data/lotto_data.csv'
                 ];
 
                 let results = [];
